--- a/MvcSiteMap_SimpleInjector3/packages.config
+++ b/MvcSiteMap_SimpleInjector3/packages.config
@@ -31,7 +31,14 @@
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="Modernizr" version="2.6.2" targetFramework="net451" />
+  <package id="MvcSiteMapProvider.MVC4" version="4.6.18" targetFramework="net451" />
+  <package id="MvcSiteMapProvider.MVC4.Core" version="4.6.18" targetFramework="net451" />
+  <package id="MvcSiteMapProvider.MVC4.DI.SimpleInjector" version="4.6.18" targetFramework="net451" />
+  <package id="MvcSiteMapProvider.MVC4.DI.SimpleInjector.Modules" version="4.6.1" targetFramework="net451" />
+  <package id="MvcSiteMapProvider.Web" version="4.6.18" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net451" />
+  <package id="SimpleInjector" version="2.2.3" targetFramework="net451" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net451" />
+  <package id="WebActivatorEx" version="2.0.6" targetFramework="net451" />
   <package id="WebGrease" version="1.3.0" targetFramework="net451" />
 </packages>
